--- a/src/assets/_iconList.scss
+++ b/src/assets/_iconList.scss
@@ -49,6 +49,8 @@
                 justify-content: space-around;
                 margin-left: -10px;
                 margin-right: -10px;
+                text-shadow: 2px 2px 3px #000000;
+                color: #ffffff;
             }
         }
 
