--- a/src/assets/_redmond7.scss
+++ b/src/assets/_redmond7.scss
@@ -421,7 +421,7 @@
                 .nj-icon-text {
                     outline: none;
                     background-color: transparent;
-                    color: #000;
+                    color: #ffffff;
                 }
             }
         }
@@ -444,6 +444,7 @@
                         color: #000;  
                         
                         .nj-icon-text {
+                            color: #000;
                             .tile-info {
                                 color: #00000099;
                             }
